perubahan judul kontak saya

--- a/contact/index.html
+++ b/contact/index.html
@@ -43,7 +43,7 @@
 
       <div class="container-fluid text-light">
         <div class="alert alert-primary" role="alert">
-          <h1>Kontak saya</h1>
+          <h1>Kontak saya origin</h1>
           <p> 
             whatsapp: 087778489855
             telegram: @abrarr
